# kd-tree

./: .gitignore  CMakeLists.txt  version.cmake
cmake/: benchmark.cmake  git.cmake  nanobind.cmake  tetgen.cmake  xsimd.cmake
src/: CMakeLists.txt  kd_time_main.cpp  kd_tree_main.cpp  main.cpp
src/KDTree/: CMakeLists.txt  Info.h  Info.h.in
src/KDTree/input/: ConfigSource.h  DataSource.h  TetgenAdapter.cpp  TetgenAdapter.h  YAMLConfigReader.cpp  YAMLConfigReader.h
src/KDTree/model/: DataSource.h  TetgenAdapter.cpp  TetgenAdapter.h
src/KDTree/plane_selection/: LogNPlane.cpp  LogNPlane.h  LogNSquaredPlane.cpp  LogNSquaredPlane.h  NoTreePlane.h  PlaneEventAlgorithm.cpp  PlaneEventAlgorithm.h  PlaneSelectionAlgorithm.cpp  PlaneSelectionAlgorithm.h  PlaneSelectionAlgorithmFactory.cpp  PlaneSelectionAlgorithmFactory.h  SquaredPlane.cpp  SquaredPlane.h
src/KDTree/tree/: KDTree.cpp  KDTree.h  KdDefinitions.cpp  KdDefinitions.h  LeafNode.cpp  LeafNode.h  SplitNode.cpp  SplitNode.h  SplitParam.h  TreeNode.cpp  TreeNode.h  TreeNodeFactory.cpp  TreeNodeFactory.h
src/KDTree/tree_structure/: KDTree.cpp  KDTree.h  KdDefinitions.cpp  KdDefinitions.h  LeafNode.cpp  LeafNode.h  SplitNode.cpp  SplitNode.h  SplitParam.h  TreeNode.cpp  TreeNode.h  TreeNodeFactory.cpp  TreeNodeFactory.h
src/KDTree/util/: UtilityConstants.h  UtilityContainer.h  UtilityFloatArithmetic.cpp  UtilityFloatArithmetic.h  UtilityThrust.h
src/KDTreePython/: CMakeLists.txt  KDTreePython.cpp
src/polyhedralGravity/: Info.h
src/polyhedralGravity/model/: GravityEvaluable.h  GravityModel.cpp  GravityModel.h  GravityModelData.h  GravityModelDetail.cpp  GravityModelDetail.h  Polyhedron.cpp  Polyhedron.h
src/polyhedralGravity/output/: CSVWriter.h
src/polyhedralGravityPython/: PolyhedralGravityPython.cpp
test/: CMakeLists.txt
test/input/: TetgenAdapterTest.cpp
test/model/: KDTreeTest.cpp
